# person_tracking

./: CMakeLists.txt  README.md  package.xml
include/person_tracking/: PersonTracker.h
launch/: person_tracker.launch
src/: PersonTracker.cpp  person_tracker_node.cpp
