<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="2">
    <name>person_tracking</name>
    <version>0.0.0</version>
    <description>
        Node to track and follow a target
    </description>
    <maintainer email="sarthakmittal2608@gmail.com">Sarthak Mittal</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

</package>